--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ subjects:
 - !lcsh 'Ranching -- New Mexico -- Fiction'
 - !lcsh 'Frontier and pioneer life -- New Mexico -- Fiction'
 - !lcc 'PS'
+- GITenberg
 title: The Iron Furrow
 url: http://www.gutenberg.org/ebooks/17088
